Added reference to original author

--- a/index.html
+++ b/index.html
@@ -536,6 +536,6 @@ transfer case and the axle ratios. Engine RPM divided by total gear ratio,
 multiplied by the tire diameter and converted for units of measurement, 
 gives vehicle's speed of travel.</p><p>
 
-</p><p>
+</p><p>This calculator was originally created by Richard B. Grover and the original version is hosted here:  <a href=https://www.public.asu.edu/~grover/willys/speed.html>href=https://www.public.asu.edu/~grover/willys/speed.html</a>a>
 
 </p></body></html>
