--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ box, the speed will be recalculated.</p>
     JPet low 5.13
 
     <p></p><b>Dana 20</b>
-    </dt><dt><input type="radio" name="tcase" value="1.0l" onclick="doTcase(value)">
+    </dt><dt><input type="radio" name="tcase" value="1.00" onclick="doTcase(value)">
     hi 1.00
     </dt><dt><input type="radio" name="tcase" value="2.03" onclick="doTcase(value)">
     low 2.03
