--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@ box, the speed will be recalculated.</p>
     low 4.00
 
     <p></p><b>Dana 300</b>
-	</dt><dt><input type="radio" name="tcase" value="1.00" onclick="doTcase(value)">
-	hi 1.00
+    </dt><dt><input type="radio" name="tcase" value="1.00" onclick="doTcase(value)">
+    hi 1.00
 	</dt><dt><input type="radio" name="tcase" value="2.62" onclick="doTcase(value)">
 	low	2.62
 	</dt><dt><input type="radio" name="tcase" value="4.00" onclick="doTcase(value)">
@@ -472,7 +472,7 @@ box, the speed will be recalculated.</p>
 	6th 0.84
 </dt></td>
 
-<td width="120" valign="top"><strong>Overdrive</strong><p>
+<td width="120" valign="top"><strong>Overdrive/Doubler</strong><p>
 <p>
 	<b>Warn/Saturn</b>
 	</p></dt><dt><input type="radio" name="odradio" value="1.00" checked="" onclick="doOD(value)">
@@ -496,7 +496,20 @@ box, the speed will be recalculated.</p>
 	</p></dt><dt><input type="radio" name="odradio" value="1.00" onclick="doOD(value)">
 	normal 1.00
 	</dt><dt><input type="radio" name="odradio" value="2.57" onclick="doOD(value)">
-	od 2.57<p>
+	high 2.57<p>
+
+    <b>NP203 Doubler</b>
+    </p></dt><dt><input type="radio" name="odradio" value="1.00" onclick="doOD(value)">
+    high 1.00
+    </dt><dt><input type="radio" name="odradio" value="2.57" onclick="doOD(value)">
+    low 1.96<p>
+    
+    <b>D300 Strongbox Doubler</b>
+    </p></dt><dt><input type="radio" name="odradio" value="1.00" onclick="doOD(value)">
+    high 1.00
+    </dt><dt><input type="radio" name="odradio" value="2.57" onclick="doOD(value)">
+    low 2.72<p>
+    
 </p></dt></td>
 
 <td valign="top">
