--- a/index.html
+++ b/index.html
@@ -451,7 +451,23 @@ box, the speed will be recalculated.</p>
     4th 1.00
     </dt><dt><input type="radio" name="trans" value="0.76" onclick="doTrans(value)">
     5th 0.76
-</dt></td>
+
+    <p></p><b>NV4500</b>
+    </dt><dt><input type="radio" name="trans" value="-5.61" onclick="doTrans(value)">
+    R 6.03
+    </dt><dt><input type="radio" name="trans" value="6.34" onclick="doTrans(value)">
+    1st 6.16
+    </dt><dt><input type="radio" name="trans" value="3.44" onclick="doTrans(value)">
+    2nd 3.11
+    </dt><dt><input type="radio" name="trans" value="1.71" onclick="doTrans(value)">
+    3rd 1.71
+    </dt><dt><input type="radio" name="trans" value="1.00" onclick="doTrans(value)">
+    4th 1.00
+    </dt><dt><input type="radio" name="trans" value="0.73" onclick="doTrans(value)">
+    5th 0.76
+
+    </dt></td>
+
 <td width="100" valign="top"><br>
     <p></p><b>6 Speeds</b>
 
