Added Novak Novadrive index.html

--- a/index.html
+++ b/index.html
@@ -486,7 +486,16 @@ box, the speed will be recalculated.</p>
     5th 1.00
     </dt><dt><input type="radio" name="trans" value="0.84" onclick="doTrans(value)">
     6th 0.84
-</dt></td>
+    </p></dt></td>
+
+<td width="120" valign="top"><strong>Between trans/tcase OD</strong><p>
+<p>
+    <b>Novak Novadrive</b>
+    </p></dt><dt><input type="radio" name="odradio" value="1.00" checked="" onclick="doOD(value)">
+    normal 1.00
+    </dt><dt><input type="radio" name="odradio" value="0.75" onclick="doOD(value)">
+    od 0.75<p>
+</p></dt></td>
 
 <td width="120" valign="top"><strong>Overdrive/Doubler</strong><p>
 <p>
