--- a/index.html
+++ b/index.html
@@ -607,9 +607,9 @@ box, the speed will be recalculated.</p>
 <p>The speed at which a vehicle travels can be calculated from the engine 
 speed, the gear ratios, and tire size. </p>
 
-<h5 align="center">engine rpm * tire circumference in inches * 60 minutes/hour
+<h5>engine rpm * tire circumference in inches * 60 minutes/hour
 <hr width="420" noshade="">
-transmision gear * od gear * tranfercase gear * axle gear * 63360 inches/mile</h5><p>
+transmision gear * mid doubler/OD gear * tranfercase gear * PTO OD gear * axle gear * 63360 inches/mile</h5><p>
 
 
 </p><p>The total gear ratio is a combination of the transmission, overdrive,
