--- a/index.html
+++ b/index.html
@@ -78,11 +78,18 @@ function doOD(gear)
 function startUp()
 {
     window.document.speedForm.tireSizeradio[7].checked=true;
+    window.document.speedForm.diameter.value="33";
     window.document.speedForm.axleradio[2].checked=true;
+    window.document.speedForm.rpratio.value="4.88";
     window.document.speedForm.transradio[3].checked=true;
+    window.document.speedForm.tranny.value="1";
     window.document.speedForm.midodradio[0].checked=true;
+    window.document.speedForm.midod.value="1";
     window.document.speedForm.tcaseradio[0].checked=true;
+    window.document.speedForm.tcgear.value="1";
     window.document.speedForm.odradio[0].checked=true;
+    window.document.speedForm.od.value="1";
+    window.document.speedForm.rpm.value="2800";
     calculate();
 }
 
